# package

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  JOSS_SUBMIT.md  LICENSE  README.md  organic_algorithm_benchmarks.py  pyproject.toml  regev_classical_postprocess.py
.github/workflows/: test.yml
joss/: paper.bib  paper.md
research_scripts/: generate_paper_figures.py  generate_revised_figures.py  hybrid_qrc_qc.py  organic_benchmarks_extended.py  organic_qc_feasibility.py  quantum_core.py  shor_regev_scaling.py  svilc_kbedt_lattice.py
src/organic_qc_bench/: __init__.py  bv.py  cli.py  core.py  peak.py  photoswitch.py  profiles.py  states.py  svilc.py
tests/: test_smoke.py
